test/lhsForget3.slq
def main(){
	forget(x=2:int[10]):=2; /// error
	return x; /// error
}
